K8s_configs/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp-v2
  template:
    metadata:
      labels:
        app: myapp-v2
    spec:
      containers:
      - name: myapp2-container
        image: us-docker.pkg.dev/applied-well-406512/docker/myapp:v2
        command: ["pm2-runtime", "start", "app2.js", "--name", "my-app2"]
        ports:
            - containerPort: 4005
            
      #     volumeMounts:
      #       - name: app-logs-volume
      #         mountPath: /var/log/myapp
      # volumes:
      #   - name: app-logs-volume
      #     persistentVolumeClaim:
      #       claimName: app-logs-pvc
      imagePullSecrets:
        - name: gcr-secret
