K8s_configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sentimentanalysis
  template:
    metadata:
      labels:
        app: sentimentanalysis
    spec:
      containers:
        - name: nlp-app
          image: gcr.io/nth-glass-406611/myapp:v1
          ports:
            - containerPort: 3005
          readinessProbe:
            httpGet:
              path: /
              port: 3005
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /
              port: 3005
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2
          startupProbe:
            httpGet:
              path: /
              port: 3005
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2  
          volumeMounts:
            - mountPath: /var/lib/www/html
              name: mypvc
          # resources:
          #   requests:
          #     memory: "128Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "256Mi"
          #     cpu: "500m"
      imagePullSecrets:
        - name: gcr-secret
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: pvc-demo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-3006
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sentimentanalysis-3006
  template:
    metadata:
      labels:
        app: sentimentanalysis-3006
    spec:
      containers:
        - name: nlp-app
          image: gcr.io/nth-glass-406611/myapp:v1
          ports:
            - containerPort: 3006
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3005
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 2
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3006
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 2
          # startupProbe:
          #   httpGet:
          #     path: /
          #     port: 3006
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 2  
          # volumeMounts:
          #   - mountPath: /var/lib/www/html
          #     name: mypvc
          # resources:
          #   requests:
          #     memory: "128Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "256Mi"
          #     cpu: "500m"
      imagePullSecrets:
        - name: gcr-secret
      # volumes:
      #   - name: mypvc
      #     persistentVolumeClaim:
      #       claimName: pvc-demo
