K8s_configs/fluentd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
  labels:
    k8s-app: fluent-bit-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    matchLabels:
      k8s-app: fluent-bit-logging
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-logging
        version: v1
        kubernetes.io/cluster-service: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
    spec:
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:2.2.2
        imagePullPolicy: Always
        ports:
          - containerPort: 2020
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: application-log
          mountPath: /var/log/
          subPath: application.log
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
        # Add a volume mount for Elasticsearch credentials
        - name: elasticsearch-auth
          secret:
            secretName: elasticsearch-secret
            items:
            - key: CLOUD_ELASTICSEARCH_ID
              path: elastic_id
            - key: CLOUD_ELASTICSEARCH_USER
              path: elastic_user
            - key: CLOUD_ELASTICSEARCH_PASSWORD
              path: elastic_password
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config
      # Add a volume for Elasticsearch credentials
      - name: elasticsearch-auth
        secret:
          secretName: elasticsearch-secret
  tolerations:
  - key: node-role.kubernetes.io/master
    operator: Exists
    effect: NoSchedule
  - operator: "Exists"
    effect: "NoExecute"
  - operator: "Exists"
    effect: "NoSchedule"
