K8s_configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentimentanalysis
spec:
  type: NodePort
  selector:
    app: sentimentanalysis
  ports:
  - port: 80
    targetPort: 3005
