K8s_configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: pavan2.juno.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentimentanalysis
                port:
                  number: 80
    - host: pavan3.juno.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: another-sentimentanalysis
                port:
                  number: 80
